# Magpie

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
plugin/: README.md  generate-manifest.sh  plugin.json  signing-key.pub
src/: approvals.rs  bridge.rs  config.rs  lib.rs  main.rs  platform.rs  render.rs
src/bamboo/: client.rs  mod.rs  stream.rs  types.rs
