[package]
name = "magpie"
version = "0.1.1"
edition = "2021"
description = "Magpie (鹊) — standalone IM connector for Bamboo. Drives Bamboo agent sessions from Telegram/Feishu over Bamboo's public HTTP/WS API."
license = "MIT"
repository = "https://github.com/bigduu/magpie"

[lib]
name = "magpie"
path = "src/lib.rs"

[[bin]]
name = "magpie"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client. NEVER switch to rustls/aws-lc — native-tls only (see
# reqwest native-tls pin precedent in bamboo/nova). Verify with
# `cargo tree -i aws-lc-sys` (must error "did not match").
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# WebSocket client for /v2/stream, native-tls to match reqwest's TLS stack.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "native-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "2"

# Platform trait + adapters (ported from bamboo's connect/ module).
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }

# Feishu/Lark event long-connection wire protocol (pbbp2.Frame/Header,
# hand-written prost::Message impls — no build.rs/protoc pipeline).
prost = "0.13"
# Feishu callback-ack payload encoding (card.action.trigger toast body).
base64 = "0.22"
# Feishu WS reconnect-delay jitter (bamboo pins the same version; no
# rand_core/CSPRNG feature needed anywhere, so no aws-lc-sys risk here).
rand = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# WS URL parsing / futures utilities
futures-util = "0.3"
url = "2"

[target.'cfg(unix)'.dependencies]
# Config-file permission check (0600 enforcement) on unix.
libc = "0.2"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
# `tokio::time::{pause, advance}` — used to assert await_valid_config's poll
# loop sleeps instead of busy-spinning (issue #4), without a real 30s wait.
tokio = { version = "1", features = ["test-util"] }
